--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.connection-timeout=60000
 
-
+application.theme.color=black
 
 spring.jpa.show-sql= true
 
